--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,7 +17,7 @@ jobs:
           go-version: 1.24.2
 
       - name: Run lint
-        run: make lint-fix
+        run: make -B lint-fix
 
   test:
     runs-on: ubuntu-latest
@@ -29,7 +29,7 @@ jobs:
           go-version: 1.24.2
 
       - name: Run tests
-        run: make tests
+        run: make -B tests
 
   build:
     runs-on: ubuntu-latest
@@ -46,14 +46,14 @@ jobs:
           sudo apt-get install -y protobuf-compiler
 
       - name: Setup config
-        run: make setup
+        run: make -B setup
 
       - name: Replace API Key
         run: |
           sed -i 's/api_key: ".*"/api_key: "${{ secrets.TON_API_KEY }}"/' config.yaml
 
       - name: Generate proto
-        run: make proto
+        run: make -B proto
 
       - name: Build Docker and Run
         run: make docker_run
