--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           go-version: 1.24.2
 
+      - name: Generate proto
+        run: make -B proto
+
       - name: Run lint
         run: make -B lint-fix
 
@@ -27,6 +30,9 @@ jobs:
       - uses: actions/setup-go@v5
         with:
           go-version: 1.24.2
+
+      - name: Generate proto
+        run: make -B proto
 
       - name: Run tests
         run: make -B tests
