--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,36 +7,6 @@ on:
     branches: [main]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.24.2
-
-      - name: Generate proto
-        run: make -B proto
-
-      - name: Run lint
-        run: make -B lint-fix
-
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-go@v5
-        with:
-          go-version: 1.24.2
-
-      - name: Generate proto
-        run: make -B proto
-
-      - name: Run tests
-        run: make -B tests
-
   build:
     runs-on: ubuntu-latest
     steps:
@@ -61,5 +31,11 @@ jobs:
       - name: Generate proto
         run: make -B proto
 
-      - name: Build Docker and Run
+      - name: Run lint
+        run: make -B lint-fix
+
+      - name: Run tests
+        run: make -B tests
+
+      - name: Build in docker
         run: make docker_run
