--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -21,6 +21,14 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y protobuf-compiler
 
+      - name: Install protoc-gen-go
+        run: |
+          GO111MODULE=on go get google.golang.org/protobuf/cmd/protoc-gen-go
+          GO111MODULE=on go get google.golang.org/grpc/cmd/protoc-gen-go-grpc
+
+      - name: Add Go bin to PATH
+        run: echo "::add-path::$(go env GOPATH)/bin"
+
       - name: Setup config
         run: make -B setup
 
